# PropIntel

./: README.md  demo_phase4c.py  main.py  project-urls.txt  propintel.py  pyproject.toml  requirements.txt  run_data_cleaning.py  test_collection_routing.py  test_phase1.py  test_prompt_effectiveness.py  test_queries.txt  test_query_enhancement.py  test_query_integration.py
agentic/: __init__.py
agentic/agents/: EBUILDER_API_SPEC.md  __init__.py  api_agent.py  api_client.py  api_models.py  base.py  rag_agent.py
agentic/memory/: __init__.py  conversation.py
agentic/workflow/: __init__.py  orchestrator.py  routing.py  state.py
cli/: __init__.py  formatter.py  propintel_cli.py  session_manager.py  test_cli.py
data/chromadb/: chroma.sqlite3
docs/: CLI_USER_GUIDE.md  PHASE_4A_COMPLETION.md  PHASE_4B_COMPLETION.md  PHASE_4C_COMPLETION.md  PHASE_4C_SUCCESS_SUMMARY.txt  PHASE_4D_COMPLETION.md
generation/: __init__.py  answer_generator.py  answer_validator.py  llm_service.py  prompt_manager.py  test_generation.py
ingestion/: __init__.py  chunk_projects.py  clean_projects.py  ingest_projects.py  main_scraper.py  run_data_ingestion.py  scrape_projects.py
retrieval/: __init__.py  collection_router.py  query_processor.py  result_ranker.py  retrieval_orchestrator.py  retriever.py  test_retrieval.py
tests/: __init__.py  conftest.py  test_agentic_rag_agent.py  test_api_agent.py  test_cli_workflow.py  test_phase1_infrastructure.py  test_phase2_company_info.py  test_phase3_data_cleaning.py  test_phase3_simple.py  test_workflow_integration.py
(+41 files in other folders)
