[project]
name = "propintel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "deep-translator==1.11.4",
    "fastapi>=0.121.2",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "lxml>=6.0.2",
    "openai>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]
